fixed text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,11 @@
   font-size: 1.5rem;
   margin: 0%;
   padding: 0%;
+
+  align-items: center;
+
+  width: 100%;
+  max-width: 300px;
   height: 40px;
 }
 .card-label-area * {
@@ -102,11 +107,18 @@
 }
 .checkbox {
   border-radius: 6px;
-  width: 2rem;
-  height: 2rem;
+  width: 1.5rem;
+  height: 1.5rem;
   accent-color: var(--accent-background-default);
 
-  transform: translateY(5px);
+
+  flex-shrink: 0;
+  flex-grow: 0;
+}
+.title {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card label {
